# kg-benchmark

./: .env.example  .env.ollama.vm  .gitattributes  .gitignore  AGENTS.md  README.md  cache_sqlite.py  classifier.py  fetcher.py  nb.ipynb  pyproject.toml  requirements.txt  script.py  temp.md
docs/: 01_Scientific_Vision.md  02_Architecture_and_Pipeline.md  03_Taxonomy_and_Schema.md  04_Evaluation_Protocols.md  05_Classifier_Specification.md  06_Classified_Benchmark.md  Guardian_Scripts.md  Pipeline_Summary.md  README.md  Time-Traveler_Paradox.md  data_fetch.md
docs-conceptual/: 00-full_project_description.md  00-kg_llm_benchmark.md  Benchmark_Taxonomy.md  Evaluation_Framework.md  README.md  Scientific_Vision.md  Temporal_Validity.md  dataset_tiers_and_selection.md
docs-public/: Benchmark_Invariants.md  Correct_Usage_and_Pitfalls.md  Dataset_Card.md  Project_Overview_Report.html  Project_Technical_Appendix.html  README.md  Release_Structure.md
docs-technical/: 00-implementation_plan.md  Artifact_Schemas.md  Benchmark_Selection.md  Classifier_Specification.md  Conceptual_Deviation_Report.md  Confidence_Frequency_Report.md  Evaluation_Harness.md  Few_Shot_Evaluation.md  LLM_Endpoint_Smoke_Test.md  Non_LLM_Baselines.md  Ollama_VM_Runbook.md  Paper_Execution_Plan.md  Pipeline_Implementation.md  Prompt_Development.md  Proposal_Validation.md  README.md  Reasoning_Floor.md  Reasoning_Floor_Viewer.md  TBox_Taxonomy_Patch_Governance.md  TBox_Taxonomy_Patch_Task.md  TBox_Update_Analysis.md  Track_Diagnosis.md  few_shot_evaluation_implementation_plan.md  tbox_taxonomy_patch_implementation_plan.md
guardian/: __init__.py  patch_parser.py
pipeline/: classifier.py  fetcher.py  splitter.py
reports/: classifier_stats.json  confidence_frequency_report.json
schemas/: 04_classified_benchmark.schema.json  few_shot_support_set.schema.json  tbox_reform_proposal.schema.json  tbox_taxonomy_patch_proposal.schema.json  track_diagnosis.schema.json  verified_repair_proposal.schema.json
scripts/: Ollama_VM_Runbook.md  __init__.py  analyze_tbox_updates.py  classifier_audit_report.py  classifier_delta_transition.py  confidence_frequency_report.py  enrich_tbox_taxonomy_patch_core_report.py  fix_phase_d_audit_annotations.py  generate_manual_audit_case_cards.py  prompt_dev_diagnostic_isolation.py  prompt_dev_templates.py  reasoning_floor_viewer.py  reasoning_floor_viewer_data.py  run_phase_f_v4_ollama_holdout.sh  run_phase_g_ollama_oracle.sh  test_llm_endpoint.py  vm_ollama_setup.sh
src/: apply_audit_policy.py  audit_summarize.py  build_audit_sample.py  classifier.py  derive_tbox_taxonomy_patch_gold.py  (+9 more)
(+575 files in other folders)
