[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kg-benchmark"
version = "0.0.0"
description = "WikidataRepairEval research pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ijson>=3.2",
    "mwclient>=0.11",
    "openai>=2.38.0",
    "requests>=2.32",
    "tqdm>=4.66",
    "zstandard>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]
analysis = [
    "matplotlib>=3.8",
    "numpy>=2.0",
    "pandas>=2.0",
    "seaborn>=0.13",
]
notebook = [
    "ipykernel>=6.29",
    "jupyter>=1.0",
]
ui = [
    "streamlit>=1.42",
]

[project.scripts]
kg-fetcher = "fetcher:main"
kg-classifier = "classifier:main"
kg-splitter = "splitter:main"
kg-select-benchmark-cases = "select_benchmark_cases:main"
kg-evaluate = "evaluate:main"
kg-reasoning-floor = "reasoning_floor:main"
kg-non-llm-baselines = "non_llm_baselines:main"
kg-reasoning-floor-viewer = "scripts.reasoning_floor_viewer:main"
kg-test-llm-endpoint = "scripts.test_llm_endpoint:main"
kg-analyze-tbox-updates = "scripts.analyze_tbox_updates:main"
kg-classifier-audit-report = "scripts.classifier_audit_report:main"

[tool.setuptools]
package-dir = {"" = "src", "scripts" = "scripts"}
packages = ["guardian", "lib", "scripts"]
py-modules = [
    "classifier",
    "evaluate",
    "fetcher",
    "non_llm_baselines",
    "reasoning_floor",
    "select_benchmark_cases",
    "splitter",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--capture=sys"
